--- a/specs-dev/function-onb-us-enum-exp-fn.yaml
+++ b/specs-dev/function-onb-us-enum-exp-fn.yaml
@@ -1,35 +1,35 @@
 include:
-- ./func/*
+- fission.py
 kind: ArchiveUploadSpec
-name: func-NQVC
+name: fission-py-CDFq
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: fn-get-experience-time-9dbe8811-2f2b-4667-b1d1-8cba2e401ab3
+  name: onb-us-enum-exp-fn-2cfbc79d-2f95-48af-9694-c29fca355314
   namespace: default
 spec:
   deployment:
     checksum: {}
+    type: url
+    url: archive://fission-py-CDFq
   environment:
-    name: env-get-experience-time
+    name: onb-us-enum-exp-env
     namespace: default
   source:
     checksum: {}
-    type: url
-    url: archive://func-NQVC
 status:
-  buildstatus: pending
-  lastUpdateTimestamp: "2022-07-12T17:51:14Z"
+  buildstatus: none
+  lastUpdateTimestamp: "2023-01-05T19:34:48Z"
 
 ---
 apiVersion: fission.io/v1
 kind: Function
 metadata:
   creationTimestamp: null
-  name: fn-get-experience-time
+  name: onb-us-enum-exp-fn
   namespace: default
 spec:
   InvokeStrategy:
@@ -38,18 +38,24 @@ spec:
       MaxScale: 3
       MinScale: 1
       SpecializationTimeout: 120
-      TargetCPUPercent: 80
+      TargetCPUPercent: 0
+      hpaMetrics:
+      - resource:
+          name: cpu
+          target:
+            averageUtilization: 80
+            type: Utilization
+        type: Resource
     StrategyType: execution
   concurrency: 500
   environment:
-    name: env-get-experience-time
+    name: onb-us-enum-exp-env
     namespace: default
   functionTimeout: 60
   idletimeout: 120
   package:
-    functionName: main.get_enums
     packageref:
-      name: fn-get-experience-time-9dbe8811-2f2b-4667-b1d1-8cba2e401ab3
+      name: onb-us-enum-exp-fn-2cfbc79d-2f95-48af-9694-c29fca355314
       namespace: default
   requestsPerPod: 10000
   resources: {}
