--- a/specs-dev/env-onb-us-enum-exp-env.yaml
+++ b/specs-dev/env-onb-us-enum-exp-env.yaml
@@ -5,17 +5,17 @@ metadata:
   name: onb-us-enum-exp-env
   namespace: default
 spec:
-  builder:
-    container:
-      name: ""
-      resources: {}
   imagepullsecret: nexus-v3
   keeparchive: false
-  resources: {}
+  poolsize: 1
+  resources:
+    requests:
+      cpu: 128m
+      memory: 128Mi
+    limits:
+      cpu: 256m
+      memory: 256Mi
   runtime:
-    container:
-      name: ""
-      resources: {}
     image: nexus.sigame.com.br/fission-onboarding-us-enum-exp:0.2.0-0
     podspec:
       containers:
@@ -35,4 +35,5 @@ spec:
           value: "5VUn2yD5"
         - name: LD_LIBRARY_PATH
           value: "/opt/instantclient"
+  terminationGracePeriod: 3
   version: 3
