--- a/specs-uat-old-new-deploy/env-onb-us-enum-exp-env.yaml
+++ b/specs-uat-old-new-deploy/env-onb-us-enum-exp-env.yaml
@@ -5,18 +5,18 @@ metadata:
   name: onb-us-enum-exp-env
   namespace: default
 spec:
+  builder:
+    container:
+      name: ""
+      resources: {}
   imagepullsecret: nexus-v3
   keeparchive: false
-  poolsize: 1
-  resources:
-    requests:
-      cpu: 128m
-      memory: 128Mi
-    limits:
-      cpu: 256m
-      memory: 256Mi
+  resources: {}
   runtime:
-    image: nexus.sigame.com.br/fission-onboarding-us-enum-exp:0.2.0-0
+    container:
+      name: ""
+      resources: {}
+    image: nexus.sigame.com.br/fission-onboarding-us-enum-exp:0.1.0
     podspec:
       containers:
       - name: onb-us-enum-exp-env
@@ -41,5 +41,4 @@ spec:
           value: "1521"
         - name: LD_LIBRARY_PATH
           value: "/opt/instantclient"
-  terminationGracePeriod: 3
   version: 3
